crates/solidity/testing/snapshots/bindings_output/user_types/in_contract/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or CloseBrace or ConstructorKeyword or EnumKeyword or EventKeyword or FallbackKeyword or FixedKeyword or FunctionKeyword or Identifier or IntKeyword or MappingKeyword or ModifierKeyword or ReceiveKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword or UsingKeyword.
   ╭─[input.sol:2:5]
   │
 2 │ ╭─▶     type Internal is uint;
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 8 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
